deploy/kubernetes/ingress/mushop-dns.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mushop-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: mushop-tls-prod-secret 
    hosts:
    - mushop.ateam.cloud
    - store.mushop.ateam.cloud
    - secure.mushop.ateam.cloud
  rules:
  - host: mushop.ateam.cloud
    http:
      paths:
      - path: /api
        backend:
          serviceName: api
          servicePort: 80
      - path: /
        backend:
          serviceName: storefront
          servicePort: 80
  - host: secure.mushop.ateam.cloud
    http:
      paths:
      - path: /api
        backend:
          serviceName: api
          servicePort: 80
      - path: /
        backend:
          serviceName: storefront
          servicePort: 80
