deploy/kubernetes/ingress/mushop-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mushop-ingress
  namespace: mushop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 'mushop.ateam.cloud'
    http:
      paths:
      - path: /api
        backend:
          serviceName: api
          servicePort: 80
      - path: /
        backend:
          serviceName: storefront
          servicePort: 80
  - host: '*.mushop.ateam.cloud'
    http:
      paths:
      - path: /api
        backend:
          serviceName: api
          servicePort: 80
      - path: /
        backend:
          serviceName: storefront
          servicePort: 80
