deploy/kubernetes/ingress/mushop-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mushop-test
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: mushop-test-tls
    hosts:
    - test.mushop.ateam.cloud
  rules:
  - host: test.mushop.ateam.cloud
    http:
      paths:
      - path: /api
        backend:
          serviceName: api
          servicePort: 80
      - path: /
        backend:
          serviceName: storefront
          servicePort: 80
