deploy/kubernetes/ingress/mushop.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mushop-store
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: api
          servicePort: 80
      - path: /
        backend:
          serviceName: storefront
          servicePort: 80
